cor do cabeçário, cor do título

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <hr>
     <section>
         <h2>
-            In Utero
+            Clube da Luta
         </h2>
-        <img src="https://i.scdn.co/image/ab67616d0000b273c4f52ef8782f0e8ede4c1aaf" alt="imagem da capa do álbum In Uero">
-        <p>In Utero é o terceiro e último álbum de estúdio da banda grunge americana Nirvana, lançado em 13 de setembro de 1993 pela DGC Records. O grupo pretendia que essa gravação se afastasse significativamente da produção polida do seu álbum anterior, Nevermind (1991).</p>
+        <img src="2wCEAAkGBxMTEhUTExMWFRUXFxoYGRgXFxcaGhoaGxoYFxUYGxgYHSggHRslHRcaITEhJSkrLi4uFx8zODMtNygtLisBCgoKDg0OGhAQGy0lHyUuLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLf" alt="imagem da capa do filme Clube da Luta">
+        <p>Um homem deprimido que sofre de insônia conhece um estranho vendedor chamado Tyler Durden e se vê morando em uma casa suja depois que seu perfeito apartamento é destruído. A dupla forma um clube com regras rígidas onde homens lutam. A parceria perfeita é comprometida quando uma mulher, Marla, atrai a atenção de Tyler.</p>
     </section>
  
 </body>
